<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">Token</string>
    <string name="app_name_capitalized">TOKEN</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="token_icon_desc">This is the token icon!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="profile_button">Profile</string>
    <string name="camera_button">Camera</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="placeholder_image">Serves as placeholder image before confirmation</string>
    <string name="retake_photo_icon">Use this button to retake photo</string>
    <string name="accept_photo_icon">Use this button to accept the photo for a token</string>
    <string name="caption_placeholder">Write your caption here&#8230;</string>
    <string name="share_with">Share With:</string>
    <string name="me_icon_label">Me</string>
    <string name="friends_icon_label">Friends</string>
    <string name="public_icon_label">Public</string>
    <string name="first_time_prompt"><u>First Time User?</u></string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="user_name">Hip Ster</string>
    <string name="memories_label">Memories Rediscovered</string>
    <string name="profile_views_label">Profile Views</string>
    <string name="title_activity_show_media">ShowMediaActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_show_friend_media">ShowFriendMediaActivity</string>
    <string name="facebook_app_id">901186336601012</string>
    <string name="title_facebook_login">Token - Facebook Login</string>
    <string name="title_activity_hoover_tower">HooverTower</string>

</resources>
