<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/White"
    tools:context="com.hcid.token.MainActivity" >

	<ImageView
	    android:contentDescription="@string/token_icon_desc"
	    android:layout_width="300dp"
	    android:layout_height="300dp"
	    android:layout_gravity="center_horizontal"
	    android:src="@drawable/token_full" />
	
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:fontFamily="Helvetica"
	    android:gravity="center_horizontal"
	    android:text="@string/app_name_capitalized"
	    android:textSize="90sp" />
	
	<TextView 
	    android:id="@+id/tutorial_text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:text="@string/first_time_prompt"
	    android:textColor="@color/Gray"/>
	
	<ImageView
	    android:contentDescription="@string/login_facebook"
	    android:id="@+id/login_facebook_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="50dp"
	    android:src="@drawable/login_facebook" />

</LinearLayout>
